[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/temp/OverworldUIs/EnergyBar/EnergyBar_fill.png" type="Texture" id=1]
[ext_resource path="res://art/fonts/STXINWEI.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://art/temp/PauseWindow/background.png" type="Texture" id=3]
[ext_resource path="res://art/temp/ItemAccessDetailBG.png" type="Texture" id=4]
[ext_resource path="res://art/temp/PauseWindow/item_selected.png" type="Texture" id=5]
[ext_resource path="res://global/HomeUpdateWindow/HomeUpdateWindow.gd" type="Script" id=6]
[ext_resource path="res://art/temp/PauseWindow/scroll_bar.png" type="Texture" id=7]
[ext_resource path="res://art/temp/PauseWindow/scroll_bg.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[node name="HomeUpdateWindow" type="Node2D"]
z_index = 800
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 640, 360 )

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( 280, 160 )

[node name="Button1" type="TextureButton" parent="Buttons"]
margin_right = 450.0
margin_bottom = 150.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Button1"]
margin_right = 89.0
margin_bottom = 29.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "厨房"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="Buttons"]
margin_top = 60.0
margin_right = 450.0
margin_bottom = 210.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Button2"]
margin_right = 89.0
margin_bottom = 29.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "厨房"
align = 1
valign = 1

[node name="Button3" type="TextureButton" parent="Buttons"]
margin_top = 120.0
margin_right = 450.0
margin_bottom = 270.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Button3"]
margin_right = 89.0
margin_bottom = 29.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "厨房"
align = 1
valign = 1

[node name="Button4" type="TextureButton" parent="Buttons"]
margin_top = 180.0
margin_right = 450.0
margin_bottom = 330.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Button4"]
margin_right = 89.0
margin_bottom = 29.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "厨房"
align = 1
valign = 1

[node name="Button5" type="TextureButton" parent="Buttons"]
margin_top = 240.0
margin_right = 450.0
margin_bottom = 390.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Button5"]
margin_right = 89.0
margin_bottom = 29.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "厨房"
align = 1
valign = 1

[node name="Button6" type="TextureButton" parent="Buttons"]
margin_top = 300.0
margin_right = 450.0
margin_bottom = 450.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Button6"]
margin_right = 89.0
margin_bottom = 29.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "厨房"
align = 1
valign = 1

[node name="Button7" type="TextureButton" parent="Buttons"]
margin_top = 360.0
margin_right = 450.0
margin_bottom = 510.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Button7"]
margin_right = 89.0
margin_bottom = 29.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "厨房"
align = 1
valign = 1

[node name="Chosen" type="Sprite" parent="."]
position = Vector2( 280, 159 )
scale = Vector2( 1.85322, 0.602032 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( -3, -2 )

[node name="ScrollBar" type="Node2D" parent="."]
position = Vector2( 450, 360 )
scale = Vector2( 1, 1.6 )

[node name="Background" type="Sprite" parent="ScrollBar"]
texture = ExtResource( 8 )

[node name="Bar" type="Sprite" parent="ScrollBar"]
position = Vector2( -4.5, -122 )
texture = ExtResource( 7 )
centered = false

[node name="UpdateDetail" type="Node2D" parent="."]
position = Vector2( 500, 170 )

[node name="Background" type="Sprite" parent="UpdateDetail"]
position = Vector2( 255, 188 )
scale = Vector2( 3.6, 20 )
texture = ExtResource( 1 )

[node name="Name" type="Label" parent="UpdateDetail"]
margin_left = 300.0
margin_top = 10.0
margin_right = 482.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "名称"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="UpdateDetail"]
margin_left = 300.0
margin_top = 50.0
margin_right = 482.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 2 )
text = "当前等级"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="UpdateDetail"]
margin_left = 300.0
margin_top = 100.0
margin_right = 490.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 3 )
text = "升级介绍"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Need" type="RichTextLabel" parent="UpdateDetail"]
margin_left = 300.0
margin_top = 250.0
margin_right = 490.0
margin_bottom = 370.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=red]木材[color=red/]"
text = "木材"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateButton" type="TextureButton" parent="UpdateDetail"]
margin_left = 370.0
margin_top = 390.0
margin_right = 513.0
margin_bottom = 409.0
rect_scale = Vector2( 1, 1.5 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Update" type="Label" parent="UpdateDetail/UpdateButton"]
margin_right = 144.0
margin_bottom = 30.0
rect_scale = Vector2( 1, 0.667 )
custom_fonts/font = SubResource( 4 )
text = "升级"
align = 1
valign = 1

[connection signal="pressed" from="Buttons/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Buttons/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Buttons/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Buttons/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="UpdateDetail/UpdateButton" to="." method="_on_UpdateButton_pressed"]
